# PixelWar

./: .gitignore  CMakeLists.txt  README.md  test_run.bat  渲染管线实现说明.md  第一人称摄像机实现说明.md  编译和运行检查报告.md  运行状态确认.md  配置检查报告.md
include/: .gitkeep
include/glad/: glad.h
shaders/: crosshair.vert  instanced.frag  instanced.vert  line.frag  line.vert  phong.frag  phong.vert
src/: AIDirector.cpp  AIDirector.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  EnemyPool.cpp  EnemyPool.h  Geometry.cpp  Geometry.h  InstancedMesh.cpp  InstancedMesh.h  Mesh.cpp  Mesh.h  Settings.cpp  Settings.h  Shader.cpp  Shader.h  glad.c  glad_placeholder.txt  main.cpp
